# rust-web-programming

./: .gitignore  README.md
chapter1/src/: main.rs
chapter2-intro/: Cargo.toml
chapter2/chapter2-todo/: Cargo.toml
chapter2/chapter2-todo/src/: main.rs  processes.rs  state.json  state.rs
chapter2/src/: main.rs
section1/chapter1/: Cargo.toml
section1/chapter1/src/: main.rs
section1/chapter2/chapter2-intro/: Cargo.toml
section2/chapter3/basic_actix_server/: Cargo.toml
section2/chapter3/basic_threads/: Cargo.toml
section2/chapter3/managing_actix_views/: Cargo.toml
section2/chapter4/processing_requests/: Cargo.toml
section4/chapter9/testing/: Cargo.toml
section4/chapter9/testing/javascript/: main.js
section4/chapter9/testing/migrations/2021-11-22-203538_create_users/: up.sql
section4/chapter9/testing/src/: main.rs
section4/chapter9/testing/src/auth/: jwt.rs  mod.rs  processes.rs
section4/chapter9/testing/src/json_serialization/: mod.rs
section4/chapter9/testing/src/models/item/: new_item.rs
section4/chapter9/testing/src/to_do/: mod.rs
section4/chapter9/testing/src/to_do/structs/: base.rs  done.rs  pending.rs
section4/chapter9/testing/src/to_do/structs/traits/: edit.rs
section4/chapter9/testing/src/views/: path.rs
section4/chapter9/testing/src/views/app/: content_loader.rs  items.rs  login.rs  logout.rs
section4/chapter9/testing/src/views/auth/: mod.rs
section4/chapter9/testing/src/views/to_do/: edit.rs  get.rs
section4/chapter9/testing/src/views/users/: create.rs  mod.rs
section4/chapter9/testing/templates/: logout.html
(+104 files in other folders)
