[package]
name = "testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2"
actix-rt = "1.0"
actix-service = "1"
bcrypt = "0.10"
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
env_logger = "0.9"
futures = "0.3"
jwt = "0.9"
hmac = "0.8"
log = "0.4"
serde = "1"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
sha2 = "0.9"
uuid = { version = "0.8", features = ["serde", "v4"] }
